# job_description_cleaner

./: .gitignore  README.md  client_interface.py  main.py  pyproject.toml
cleaner/: create_noisy_data.py  html_preprocessing.py  utils_html.py
scripts/: create_dataset.py  test_model.py  test_noisy_metrics.py  train.py
