[project]
name = "text-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.2.1",
    "accelerate>=1.5.2",
    "beautifulsoup4>=4.13.3",
    "blobfile>=3.0.0",
    "clearml>=1.18.0",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "protobuf>=6.30.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.2",
    "uvicorn[standard]>=0.34.0",
]
